--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -9,12 +9,12 @@
   justify-content: center;
   align-items: center;
   border-radius: 4px;
-  border: 1px solid var(--border-color);
+  border: 1px solid $border-color;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .svg-client {
-  fill: var(--border-color);
+  fill: $border-color;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -24,10 +24,10 @@ li.client-item:not(:first-child) {
 
 .client-link:hover,
 .client-link:focus {
-  border-color: var(--accent-color);
+  border-color: $accent-color;
 }
 
 .client-link:hover .svg-client,
 .client-link:focus .svg-client {
-  fill: var(--accent-color);
+  fill: $accent-color;
 }
