--- a/sass/components/_decision.scss
+++ b/sass/components/_decision.scss
@@ -2,10 +2,6 @@
   padding-bottom: 0;
 }
 
-.list-decision {
-  display: flex;
-}
-
 .list-title {
   font-weight: 700;
   line-height: 1.1;
@@ -15,7 +11,7 @@
 }
 
 .list-item {
-  color: var(--color-p);
+  color: $color-p;
   line-height: 1.7;
   width: 270px;
 }
@@ -28,7 +24,7 @@
   align-items: center;
   justify-content: center;
   border: none;
-  background-color: var(--background-team);
+  background-color: $background-team;
   width: 270px;
   height: 120px;
 }
