--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,5 +1,5 @@
 .footer-title {
-  background-color: var(--background-color);
+  background-color: $background-color;
   padding: 60px 0;
 }
 
@@ -13,7 +13,7 @@
 }
 
 .logo-footer {
-  color: var(--color-white);
+  color: $color-white;
   font-family: 'Raleway';
   font-weight: 700;
   font-size: 24px;
@@ -26,13 +26,13 @@
 
 .footer-link {
   line-height: 1.7;
-  color: var(--color-white);
+  color: $color-white;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-contact {
   line-height: 24px;
-  color: rgba(255, 255, 255, 0.6);
+  color: $footer-contact-color;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 li.tel-phon {
@@ -62,7 +62,7 @@ address {
   width: 44px;
   height: 44px;
   border-radius: 50%;
-  background-color: var(--footer-border-color);
+  background-color: $footer-border-color;
 
   border-radius: 50%;
   border: none;
@@ -71,21 +71,21 @@ address {
 
 .footer-join .join-icon {
   display: inline-block;
-  fill: var(--color-white);
+  fill: $color-white;
 }
 
 .join-link:hover,
 .join-link:focus {
-  background-color: var(--accent-color);
+  background-color: $accent-color;
 }
 
 .join-link:hover .join-icon,
 .join-link:focus .join-icon {
-  fill: var(--color-white);
+  fill: $color-white;
 }
 
 .join-title {
-  color: var(--color-white);
+  color: $color-white;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -107,25 +107,22 @@ address {
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
-  background-color: var(--background-color);
+  background-color: $background-color;
   padding-left: 16px;
-
   font-size: 16px;
   line-height: 1.25;
-  color: var(--color-white);
+  color: $color-white;
 }
 
 .btn-footer {
   width: 200px;
   height: 50px;
-  background-color: var(--accent-color);
-  color: var(--color-white);
-
+  background-color: $accent-color;
+  color: $color-white;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.9;
   letter-spacing: 0.06em;
-
   display: flex;
   align-items: center;
   justify-content: center;
@@ -138,6 +135,6 @@ address {
 }
 
 .btn-footer-icon {
-  fill: var(--color-white);
+  fill: $color-white;
   margin-left: 5px;
 }
