--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,6 +1,7 @@
 header {
-  border-bottom: 1px solid #ececec;
+  border-bottom: 1px solid rgb(236, 236, 236);
 }
+
 .header-container {
   display: flex;
   align-items: center;
@@ -12,14 +13,14 @@ header {
 }
 
 .logo {
-  color: var(--color-text);
+  color: $color-text;
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 24px;
   line-height: 1.5;
 }
 .guidance.curent {
-  color: var(--accent-color);
+  color: $accent-color;
 }
 
 .curent {
@@ -37,18 +38,18 @@ header {
   height: 4px;
 
   border-radius: 2px;
-  background-color: var(--accent-color);
+  background-color: $accent-color;
 }
 
 .guidance:focus,
 .guidance:hover,
 .logo-part {
-  color: var(--accent-color);
+  color: accent-color;
 }
 
 .contact-item .guidance:focus .svg-contact,
 .contact-item .guidance:hover .svg-contact {
-  fill: var(--accent-color);
+  fill: accent-color;
 }
 
 .header-list {
@@ -60,7 +61,7 @@ header {
 }
 
 .header-link {
-  color: var(--color-text);
+  color: $color-text;
   padding: 5px 0px;
   font-weight: 500;
   letter-spacing: 0.02em;
@@ -70,7 +71,7 @@ header {
 .header-contact {
   display: flex;
   align-items: center;
-  color: var(--color-p);
+  color: $color-p;
   font-weight: 500;
   line-height: 1.1;
   letter-spacing: 0.02em;
@@ -78,7 +79,7 @@ header {
 }
 
 .svg-contact {
-  fill: var(--border-color);
+  fill: $border-color;
   margin-right: 10px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
