--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: var(--modal-bgc);
+  background-color: $modal-bgc;
 }
 
 .modal-title {
@@ -22,7 +22,7 @@
   line-height: 1.2;
   letter-spacing: 0.01em;
 
-  color: var(--color-p);
+  color: $color-p;
   margin-top: 10px;
   margin-bottom: 4px;
 }
@@ -49,10 +49,10 @@
 .modal {
   width: 528px;
   height: 581px;
-  background-color: var(--color-white);
+  background-color: $color-white;
   border-radius: 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+    0px 2px 1px $modal-bgc;
   padding: 40px;
 
   position: absolute;
@@ -68,19 +68,19 @@
 
 .close-modal {
   position: absolute;
-  border: 1px solid var(--color-p);
+  border: 1px solid $color-p;
   border-radius: 50%;
   width: 30px;
   height: 30px;
   cursor: pointer;
   right: 8px;
   top: 8px;
-  background-color: var(--color-white);
+  background-color: $color-white;
 }
 
 .close-modal:hover,
 .close-modal:focus svg {
-  fill: var(--accent-color);
+  fill: $accent-color;
 }
 
 .svg-img {
@@ -101,7 +101,7 @@
   top: 50%;
   left: 12px;
   transform: translateY(-50%);
-  fill: var(--color-text);
+  fill: color-text;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -119,13 +119,13 @@
 .agree {
   font-weight: 400;
   line-height: 2;
-  color: var(--color-p);
+  color: $color-p;
   display: flex;
   align-items: center;
 }
 
 .agree-link {
-  color: #2196f3;
+  color: $accent-color;
   text-decoration: underline;
   margin-left: 4px;
 }
@@ -135,8 +135,8 @@
   height: 50px;
   border-radius: 4px;
 
-  background-color: var(--accent-color);
-  color: var(--color-white);
+  background-color: $accent-color;
+  color: $color-white;
   border: none;
   margin-top: 20px;
   display: flex;
@@ -153,14 +153,14 @@
 
 .form-fild:focus-within textarea,
 .form-fild:focus-within input {
-  border: 1px solid var(--accent-color);
+  border: 1px solid accent-color;
 }
 .form-fild:focus-within svg {
-  fill: var(--accent-color);
+  fill: $accent-color;
 }
 
 .svg-modal-check {
-  fill: var(--color-white);
+  fill: $color-white;
 }
 
 .agree-fild {
@@ -181,14 +181,14 @@
 }
 
 .checkbox-hidden:checked + .icon {
-  border-color: var(--accent-color);
-  background-color: var(--accent-color);
+  border-color: $accent-color;
+  background-color: $accent-color;
 }
 
 .icon {
   width: 15px;
   height: 15px;
-  border: 2px solid var(--color-text);
+  border: 2px solid $color-text;
   border-radius: 2px;
   margin-right: 7px;
   display: flex;
