--- a/sass/components/_occupation.scss
+++ b/sass/components/_occupation.scss
@@ -6,16 +6,17 @@
   margin-bottom: 50px;
 }
 .occupation-item {
-  // flex-basis: calc((100%-60px) / 3);
+  width: calc((1170px - 60px) / 3);
   position: relative;
 }
+
 .occupation-item:not(:first-child) {
   margin-left: 30px;
 }
 
 .under {
   display: flex;
-  background-color: var(--under-bgc);
+  background-color: $under-bgc;
   position: absolute;
   width: 370px;
   height: 70px;
@@ -30,5 +31,5 @@
   font-size: 14px;
   line-height: 16px;
   text-transform: uppercase;
-  color: var(--color-white);
+  color: $color-white;
 }
