--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,6 +1,6 @@
 .portfolio-tack {
-  color: var(--color-text);
-  background-color: var(--background-team);
+  color: $color-text;
+  background-color: $background-team;
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
@@ -31,14 +31,14 @@
 
 .portfolio-guidance:focus,
 .portfolio-guidance:hover {
-  color: var(--color-white);
-  background-color: var(--accent-color);
+  color: $color-white;
+  background-color: $accent-color;
 }
 
 .portfolio-subtitle {
   font-weight: 700;
   font-size: 18px;
-  color: var(--color-text);
+  color: $color-text;
   line-height: 2;
   letter-spacing: 0.06em;
   margin-bottom: 4px;
@@ -46,7 +46,7 @@
 
 .portfolio-subtitle-part {
   font-weight: 700;
-  color: var(--color-text);
+  color: $color-text;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.03em;
@@ -56,21 +56,21 @@
 .portfolio-item {
   font-size: 16px;
   line-height: 1.9;
-  color: var(--color-p);
+  color: $color-p;
 }
 
 .card-set {
   display: flex;
   flex-wrap: wrap;
-  margin-left: calc(-1 * var(--card-set-gap));
-  margin-top: calc(-1 * var(--card-set-gap));
+  margin-left: calc(-1 * $card-set-gap);
+  margin-top: calc(-1 * $card-set-gap);
 }
 .card-set {
-  flex-basis: calc(100% / 3 - var(--card-set-gap));
+  flex-basis: calc(100% / 3 - $card-set-gap);
 }
 .card-item {
-  margin-left: var(--card-set-gap);
-  margin-top: var(--card-set-gap);
+  margin-left: $card-set-gap;
+  margin-top: $card-set-gap;
 }
 
 .card-part {
@@ -111,7 +111,7 @@
   transform: translatey(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  background-color: var(--accent-color);
+  background-color: $accent-color;
 }
 
 .card-link-portfolio:hover .overlay-card-move {
@@ -122,6 +122,6 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 1.5;
-  color: var(--color-white);
+  color: $color-white;
   padding: 63px 24px 0 24px;
 }
