--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,5 +1,5 @@
 .team {
-  background-color: var(--background-team);
+  background-color: $background-team;
 }
 
 .team-title {
@@ -11,8 +11,8 @@
 }
 
 .team-list-item {
-  // flex-basis: calc((100%-90px) / 4);
-  background-color: var(--color-white);
+  width: calc((1170px - 90px) / 4);
+  background-color: $color-white;
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -26,7 +26,7 @@
 }
 
 .team-item {
-  color: var(--color-p);
+  color: $color-p;
   font-size: 16px;
   line-height: 1.2;
   text-align: center;
@@ -55,16 +55,16 @@
 
 .team .social-icon {
   display: inline-block;
-  fill: var(--border-color);
+  fill: $border-color;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link:hover,
 .social-link:focus {
-  background-color: var(--accent-color);
+  background-color: $accent-color;
 }
 
 .social-link:hover .social-icon,
 .social-link:focus .social-icon {
-  fill: var(--color-white);
+  fill: $color-white;
 }
