--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -1,17 +1,3 @@
-:root {
-  --accent-color: #2196f3;
-  --background-color: #2f303a;
-  --color-white: #ffffff;
-  --color-text: #212121;
-  --color-p: #757575;
-  --background-team: #f5f4fa;
-  --border-color: #afb1b8;
-  --card-set-gap: 30px;
-  --footer-border-color: rgba(255, 255, 255, 0.1);
-  --under-bgc: rgba(47, 48, 58, 0.8);
-  --modal-bgc: rgba(0, 0, 0, 0.2);
-}
-
 $accent-color: #2196f3;
 $background-color: #2f303a;
 $color-white: #ffffff;
@@ -23,3 +9,4 @@ $card-set-gap: 30px;
 $footer-border-color: rgba(255, 255, 255, 0.1);
 $under-bgc: rgba(47, 48, 58, 0.8);
 $modal-bgc: rgba(0, 0, 0, 0.2);
+$footer-contact-color: rgba(255, 255, 255, 0.6);
