--- a/css/main.css
+++ b/css/main.css
@@ -334,36 +334,44 @@ header {
 .team {
   background-color: #f5f4fa;
 }
-
-.team-title {
+.team__title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.2;
+  text-align: center;
+  margin-bottom: 50px;
+}
+.team__pretitle {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.2;
   text-align: center;
   margin-bottom: 10px;
 }
-
-.team-list-item {
+.team__list-item {
   width: 270px;
   background-color: #ffffff;
   border-radius: 0px 0px 4px 4px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
-
-.team-list-item:not(:first-child) {
+.team__list-item:not(:first-child) {
   margin-left: 30px;
 }
-
-.team-name {
+.team__name {
   padding: 30px 0;
 }
-
-.team-item {
+.team__item {
   color: #757575;
   font-size: 16px;
   line-height: 1.2;
   text-align: center;
+}
+.team .social-icon {
+  display: inline-block;
+  fill: #afb1b8;
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social {
@@ -375,12 +383,10 @@ header {
       -ms-flex-pack: center;
           justify-content: center;
 }
-
-.social-item:not(:first-child) {
+.social__item:not(:first-child) {
   margin-left: 10px;
 }
-
-.social-link {
+.social__link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -397,21 +403,10 @@ header {
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.team .social-icon {
-  display: inline-block;
-  fill: #afb1b8;
-  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.social-link:hover,
-.social-link:focus {
+.social__link:hover, .social__link:focus {
   background-color: #2196f3;
 }
-
-.social-link:hover .social-icon,
-.social-link:focus .social-icon {
+.social__link:hover .social-icon, .social__link:focus .social-icon {
   fill: #ffffff;
 }
 
