--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,70 +1,75 @@
 .team {
   background-color: $background-team;
-}
+  &__title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.2;
+    text-align: center;
+    margin-bottom: 50px;
+  }
 
-.team-title {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.2;
-  text-align: center;
-  margin-bottom: 10px;
-}
+  &__pretitle {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.2;
+    text-align: center;
+    margin-bottom: 10px;
+  }
 
-.team-list-item {
-  width: calc((1170px - 90px) / 4);
-  background-color: $color-white;
-  border-radius: 0px 0px 4px 4px;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-}
-.team-list-item:not(:first-child) {
-  margin-left: 30px;
-}
+  &__list-item {
+    width: calc((1170px - 90px) / 4);
+    background-color: $color-white;
+    border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
+  }
 
-.team-name {
-  padding: 30px 0;
-}
-
-.team-item {
-  color: $color-p;
-  font-size: 16px;
-  line-height: 1.2;
-  text-align: center;
+  &__list-item:not(:first-child) {
+    margin-left: 30px;
+  }
+  &__name {
+    padding: 30px 0;
+  }
+  &__item {
+    color: $color-p;
+    font-size: 16px;
+    line-height: 1.2;
+    text-align: center;
+  }
+  .social-icon {
+    display: inline-block;
+    fill: $border-color;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 
 .social {
   margin-top: 16px;
   display: flex;
   justify-content: center;
-}
 
-.social-item:not(:first-child) {
-  margin-left: 10px;
-}
+  &__item:not(:first-child) {
+    margin-left: 10px;
+  }
 
-.social-link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  border: none;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  &__link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    border: none;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 
-.team .social-icon {
-  display: inline-block;
-  fill: $border-color;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  &__link:hover,
+  &__link:focus {
+    background-color: $accent-color;
+  }
 
-.social-link:hover,
-.social-link:focus {
-  background-color: $accent-color;
-}
-
-.social-link:hover .social-icon,
-.social-link:focus .social-icon {
-  fill: $color-white;
+  &__link:hover .social-icon,
+  &__link:focus .social-icon {
+    fill: $color-white;
+  }
 }
