--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -24,7 +24,7 @@
 }
 
 .hero-btn {
-  color: color-white;
+  color: $color-white;
   background-color: $accent-color;
   font-family: inherit;
   font-weight: 700;
