--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -36,11 +36,6 @@
     line-height: 1.2;
     text-align: center;
   }
-  .social-icon {
-    display: inline-block;
-    fill: $border-color;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
 }
 
 .social {
@@ -68,8 +63,13 @@
     background-color: $accent-color;
   }
 
-  &__link:hover .social-icon,
-  &__link:focus .social-icon {
+  &__link:hover &__icon,
+  &__link:focus &__icon {
     fill: $color-white;
+  }
+  &__icon {
+    display: inline-block;
+    fill: $border-color;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
