--- a/css/main.css
+++ b/css/main.css
@@ -410,12 +410,11 @@ header {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.client-item {
+.client__item {
   width: 170px;
   height: 92px;
 }
-
-.client-link {
+.client__link {
   width: 100%;
   height: 100%;
   display: -webkit-box;
@@ -432,25 +431,20 @@ header {
   -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.svg-client {
+.client__svg {
   fill: #afb1b8;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-li.client-item:not(:first-child) {
-  margin-left: 30px;
-}
-
-.client-link:hover,
-.client-link:focus {
+.client__link:hover, .client__link:focus {
   border-color: #2196f3;
 }
-
-.client-link:hover .svg-client,
-.client-link:focus .svg-client {
+.client__link:hover .client__svg, .client__link:focus .client__svg {
   fill: #2196f3;
+}
+
+li.client__item:not(:first-child) {
+  margin-left: 30px;
 }
 
 .footer-title {
