--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,33 +1,36 @@
-.client-item {
-  width: 170px;
-  height: 92px;
-}
-.client-link {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 4px;
-  border: 1px solid $border-color;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.client {
+  &__item {
+    width: 170px;
+    height: 92px;
+  }
+
+  &__link {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+    border: 1px solid $border-color;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  &__svg {
+    fill: $border-color;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  &__link:hover,
+  &__link:focus {
+    border-color: $accent-color;
+  }
+
+  &__link:hover &__svg,
+  &__link:focus &__svg {
+    fill: $accent-color;
+  }
 }
 
-.svg-client {
-  fill: $border-color;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-li.client-item:not(:first-child) {
+li.client__item:not(:first-child) {
   margin-left: 30px;
-}
-
-.client-link:hover,
-.client-link:focus {
-  border-color: $accent-color;
-}
-
-.client-link:hover .svg-client,
-.client-link:focus .svg-client {
-  fill: $accent-color;
 }
