--- a/css/main.css
+++ b/css/main.css
@@ -447,12 +447,11 @@ li.client__item:not(:first-child) {
   margin-left: 30px;
 }
 
-.footer-title {
+.footer__title {
   background-color: #2f303a;
   padding: 60px 0;
 }
-
-.footer-title .container {
+.footer__title .container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -460,118 +459,35 @@ li.client__item:not(:first-child) {
       -ms-flex-align: baseline;
           align-items: baseline;
 }
-
-.footer-logo-full {
+.footer__logo-full {
   margin-bottom: 20px;
 }
-
-.logo-footer {
+.footer__logo {
   color: #ffffff;
   font-family: "Raleway";
   font-weight: 700;
   font-size: 24px;
   line-height: 1.5;
 }
-
-.footer-item {
+.footer__item {
   margin-bottom: 9px;
 }
-
-.footer-link {
+.footer__link {
   line-height: 1.7;
   color: #ffffff;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.footer-contact {
+.footer__contact {
   line-height: 24px;
   color: rgba(255, 255, 255, 0.6);
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-li.tel-phon {
-  margin-bottom: 0;
-}
-
-address {
-  font-style: normal;
-}
-
-.footer-join {
-  margin-left: 70px;
-}
-
-.join {
-  margin-top: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.join-item:not(:first-child) {
-  margin-left: 10px;
-}
-
-.join-link {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.1);
-  border-radius: 50%;
-  border: none;
-  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.footer-join .join-icon {
-  display: inline-block;
-  fill: #ffffff;
-}
-
-.join-link:hover,
-.join-link:focus {
-  background-color: #2196f3;
-}
-
-.join-link:hover .join-icon,
-.join-link:focus .join-icon {
-  fill: #ffffff;
-}
-
-.join-title {
-  color: #ffffff;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  text-transform: uppercase;
-  margin-bottom: 20px;
-}
-
-.join-part {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.footer-subscription {
+.footer__subscription {
   margin-left: auto;
 }
-
-.input-footer {
+.footer__input {
   width: 358px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -584,8 +500,7 @@ address {
   line-height: 1.25;
   color: #ffffff;
 }
-
-.btn-footer {
+.footer__btn {
   width: 200px;
   height: 50px;
   background-color: #2196f3;
@@ -608,10 +523,75 @@ address {
   margin-left: 12px;
   cursor: pointer;
 }
-
-.btn-footer-icon {
+.footer__btn-icon {
   fill: #ffffff;
   margin-left: 5px;
+}
+
+li.tel-phon {
+  margin-bottom: 0;
+}
+
+address {
+  font-style: normal;
+}
+
+.join {
+  margin-top: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.join__footer {
+  margin-left: 70px;
+}
+.join__item:not(:first-child) {
+  margin-left: 10px;
+}
+.join__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+  border: none;
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.join__join .join__icon {
+  display: inline-block;
+  fill: #ffffff;
+}
+.join__link:hover, .join__link:focus {
+  background-color: #2196f3;
+}
+.join__link:hover .join__icon, .join__link:focus .join__icon {
+  fill: #ffffff;
+}
+.join__title {
+  color: #ffffff;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+.join__part {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .backdrop {
