--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,140 +1,139 @@
-.footer-title {
-  background-color: $background-color;
-  padding: 60px 0;
+.footer {
+  &__title {
+    background-color: $background-color;
+    padding: 60px 0;
+  }
+  &__title .container {
+    display: flex;
+    align-items: baseline;
+  }
+  &__logo-full {
+    margin-bottom: 20px;
+  }
+  &__logo {
+    color: $color-white;
+    font-family: 'Raleway';
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 1.5;
+  }
+  &__item {
+    margin-bottom: 9px;
+  }
+
+  &__link {
+    line-height: 1.7;
+    color: $color-white;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  &__contact {
+    line-height: 24px;
+    color: $footer-contact-color;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  &__subscription {
+    margin-left: auto;
+  }
+
+  &__input {
+    width: 358px;
+    height: 50px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    background-color: $background-color;
+    padding-left: 16px;
+    font-size: 16px;
+    line-height: 1.25;
+    color: $color-white;
+  }
+
+  &__btn {
+    width: 200px;
+    height: 50px;
+    background-color: $accent-color;
+    color: $color-white;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.9;
+    letter-spacing: 0.06em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    border-radius: 4px;
+    border: none;
+
+    margin-left: 12px;
+    cursor: pointer;
+  }
+
+  &__btn-icon {
+    fill: $color-white;
+    margin-left: 5px;
+  }
 }
 
-.footer-title .container {
-  display: flex;
-  align-items: baseline;
-}
-
-.footer-logo-full {
-  margin-bottom: 20px;
-}
-
-.logo-footer {
-  color: $color-white;
-  font-family: 'Raleway';
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 1.5;
-}
-
-.footer-item {
-  margin-bottom: 9px;
-}
-
-.footer-link {
-  line-height: 1.7;
-  color: $color-white;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.footer-contact {
-  line-height: 24px;
-  color: $footer-contact-color;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 li.tel-phon {
   margin-bottom: 0;
 }
 address {
   font-style: normal;
 }
-.footer-join {
-  margin-left: 70px;
-}
-
 .join {
   margin-top: 20px;
   display: flex;
   justify-content: center;
-}
 
-.join-item:not(:first-child) {
-  margin-left: 10px;
-}
+  &__footer {
+    margin-left: 70px;
+  }
 
-.join-link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  background-color: $footer-border-color;
+  &__item:not(:first-child) {
+    margin-left: 10px;
+  }
 
-  border-radius: 50%;
-  border: none;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  &__link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    background-color: $footer-border-color;
 
-.footer-join .join-icon {
-  display: inline-block;
-  fill: $color-white;
-}
+    border-radius: 50%;
+    border: none;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 
-.join-link:hover,
-.join-link:focus {
-  background-color: $accent-color;
-}
+  &__join &__icon {
+    display: inline-block;
+    fill: $color-white;
+  }
 
-.join-link:hover .join-icon,
-.join-link:focus .join-icon {
-  fill: $color-white;
-}
+  &__link:hover,
+  &__link:focus {
+    background-color: $accent-color;
+  }
 
-.join-title {
-  color: $color-white;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  text-transform: uppercase;
-  margin-bottom: 20px;
-}
+  &__link:hover &__icon,
+  &__link:focus &__icon {
+    fill: $color-white;
+  }
 
-.join-part {
-  display: flex;
-}
+  &__title {
+    color: $color-white;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+  }
 
-.footer-subscription {
-  margin-left: auto;
-}
-
-.input-footer {
-  width: 358px;
-  height: 50px;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-  background-color: $background-color;
-  padding-left: 16px;
-  font-size: 16px;
-  line-height: 1.25;
-  color: $color-white;
-}
-
-.btn-footer {
-  width: 200px;
-  height: 50px;
-  background-color: $accent-color;
-  color: $color-white;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.9;
-  letter-spacing: 0.06em;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  border-radius: 4px;
-  border: none;
-
-  margin-left: 12px;
-  cursor: pointer;
-}
-
-.btn-footer-icon {
-  fill: $color-white;
-  margin-left: 5px;
+  &__part {
+    display: flex;
+  }
 }
