--- a/css/main.css
+++ b/css/main.css
@@ -570,7 +570,7 @@ address {
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.join__join .join__icon {
+.join__icon {
   display: inline-block;
   fill: #ffffff;
 }
