--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -109,7 +109,7 @@ address {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
-  &__join &__icon {
+  &__icon {
     display: inline-block;
     fill: $color-white;
   }
